[package]
name = "rusty-red-ale"
version = "0.1.0"
authors = ["Chris Donnelly <chris@donnelly.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.9.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3.0"